--- a/MVC_Git0514/MVC_Git0514.csproj
+++ b/MVC_Git0514/MVC_Git0514.csproj
@@ -242,6 +242,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\MyAction1.cshtml" />
+    <Content Include="Views\Home\MyAction2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
